[package]
name = "wasm-h3"
version = "0.1.0"
edition = "2024"

[dependencies]
tokio = { version = "1.24", features = ["sync", "macros", "rt", "time"] }
bytes = "1.5"
http = "0.2"
thiserror = "1.0"
tracing = "0.1"
tracing-subscriber = "0.3"
futures = "0.3"
serde = { version = "1.0", features = ["derive"] }
bincode = "1.3"

[features]
default = ["client", "server"]
client = []
server = []


[patch.crates-io]
libc = { git = "https://github.com/wasix-org/libc", branch = "master" }
tokio = { git = "https://github.com/wasix-org/tokio", branch = "wasix-1.24.2" }
